# woodstove-thermocouple

./: flash command.txt  github_projects alias  pyproject.toml  wip.py
thermocouple/: .micropythonrc  boot.py  main.py
