[tool.poetry]
name = "thermocouple"
version = "0.1.0"
description = "Micropython script to monitor wood stove temperature"
authors = ["Bernie Reilly <reilly_bernie@mac.com>"]

[tool.poetry.dependencies]
python = "^3.9"
adafruit-ampy = "^1.1.0"
esptool = "^3.2"
mpremote = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
